--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             content="width=device-width, initial-scale=1.0"
             name="viewport"
     />
+    <meta
+            content="red"
+            name="theme-color"
+    >
     <title>ИРТ - Роботизированные технологии</title>
 </head>
 <body class="start">
