--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             name="viewport"
     />
     <meta
-            content="red"
+            content="#3E456C"
             name="theme-color"
     >
     <title>ИРТ - Роботизированные технологии</title>
