--- a/index.html
+++ b/index.html
@@ -250,6 +250,10 @@
                 transform: rotate(180deg)
             }
         }
+
+        #main_prerender {
+            z-index: -10;
+        }
     </style>
 </head>
 <body class="start">
@@ -358,5 +362,378 @@
         src="/src/main.jsx"
         type="module"
 ></script>
+<div id="main_prerender">
+    <div>
+        <header>
+            <a href="/"></a>
+            <div>
+                <nav>
+                    <div>
+                        <a href="/">О нас</a>
+                        <div>
+                            <ul>
+                                <ul>
+                                    <li>
+                                        <a href="/#advantages">Преимущества</a>
+                                    </li>
+                                </ul>
+                            </ul>
+                            <br />
+                            <ul>
+                                <ul>
+                                    <li>
+                                        <a href="/#capabilities">Возможности</a>
+                                    </li>
+                                </ul>
+                            </ul>
+                            <br />
+                            <ul>
+                                <li>
+                                    <a href="/#industrial_robots">Промышленные роботы</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <a href="/cases">Наши работы</a>
+                    <a href="/manufacturing">Производство</a>
+                    <div>
+                        <a href="/catalog">Каталог оборудования</a>
+                        <div>
+                            <ul>
+                                <ul>
+                                    <li>
+                                        <p>Дробилка роторная</p>
+                                    </li>
+                                </ul>
+                            </ul>
+                            <br />
+                            <ul>
+                                <ul>
+                                    <li>
+                                        <p>Изоляторы</p>
+                                    </li>
+                                </ul>
+                            </ul>
+                            <br />
+                            <ul>
+                                <li>
+                                    <p>Сушильные шкафы</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <a href="/#contacts">Контакты</a>
+                </nav>
+            </div>
+        </header>
+        <div>
+            <h1>Автоматизация <br />рабочих процессов <br />на вашем производстве</h1>
+            <div>
+                <video
+                        autoplay="autoplay"
+                        height="100%"
+                        loop="loop"
+                        width="300"
+                >
+                    <source
+                            src="/video.webm"
+                            type="video/webm"
+                    />
+                </video>
+            </div>
+            <p>Точно в срок. Качество. Договор.</p>
+        </div>
+        <section>
+            <h2>Наши преимущества</h2>
+            <p>ИРТ выведет ваше производство на новый<br /> уровень<br /> рентабельности и качества.</p>
+            <ul>
+                <li>
+                    <h3>Автоматизация рабочих процессов</h3>
+                    <p>Позволяет выполнять рутинные задачи и операции, которые раньше выполнялись вручную, с помощью технологий и программного обеспечения.</p>
+                </li>
+                <li>
+                    <h3>Гибкость использования</h3>
+                    <p>Наши технологии применяются в самых разных направлениях &mdash; от электроники и фармацевтики до проблем промышленности и сельского хозяйства. Мы обеспечиваем быструю установку и адаптацию под особенности вашего производства, сохраняя высочайшее качество выполняемых работ.</p>
+                </li>
+                <li>
+                    <h3>Производитель-<br />ность</h3>
+                    <p>Наши технологии для автоматизации круглосуточно решают поставленные задачи с высоким уровнем точности и стабильности.</p>
+                </li>
+                <li>
+                    <h3>Рентабельность</h3>
+                    <p>Сокращение затрат на<br /> персонал<br /> и его<br /> обучение,<br /> а также<br />снижение<br /> производственных<br /> затрат для увеличение объема<br /> и качества<br /> выпускаемой<br /> продукции.
+                    </p>
+                </li>
+                <li>
+                    <h3>Независимость<br />от кадров</h3>
+                    <p>Наши технологии позволяют<br /> обеспечить стабильность производства даже при<br /> нехватке или<br /> отсутствии высококвалифицированного высококвалифицирован- ного персонала. Нашим решениям по автоматизации не нужны отпуск или выходной, и они независимы от человеческого фактора.
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Наши<br /> возможности</h2>
+            <h3>Автоматизация технологических процессов</h3>
+            <h3>Модернизация оборудования</h3>
+            <ul>
+                <ul>
+                    <li>
+                        <h3>Написание<br /> управляющих<br /> программ<br /> для оборудования</h3>
+                    </li>
+                    <li>
+                        <h3>Интеллектуальные разработки</h3>
+                        <p>Мы сможем не только<br /> поставить<br /> необходимых<br />роботов, но и спроектировать<br /> все узлы и компоненты для интеграции в ваш рабочий<br /> процесс
+                        </p>
+                    </li>
+                </ul>
+            </ul>
+            <h3>Промышленные<br /> роботы<br /> манипуляторы</h3>
+            <p>Программирование и пуско-<br />наладка</p>
+            <h3>Собственное производство</h3>
+            <p>Изготовление необходимой оснастки<br /> и инструментов<br /> на собственном производстве</p>
+            <ul>
+                <li>
+                    <h3>3D-моделирование<br /> и разработка<br /> чертежей</h3>
+                </li>
+                <li>
+                    <h3>Написание постпроцессоров</h3>
+                </li>
+                <li>
+                    <h3>Программирование контроллеров</h3>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Промышленные роботы манипуляторы</h2>
+            <p>Мы предлагаем обширный ассортимент промышленных роботов-<br />манипуляторов, обеспечиваем их интеграцию<br /> в производственный процесс,<br /> выполняем программирование, изготовление<br /> необходимого оборудования и<br /> оснастки, а<br /> также предоставляем всестороннюю техническую и<br /> программную поддержку.
+            </p>
+            <div>
+                <div>
+                    <h3>Роботы SCARA</h3>
+                    <div>
+                        <img
+                                alt="Фото робота серии SCARA"
+                                src="/src/components/industrialRobotsBlock/robot1/photo.webp"
+                        />
+                    </div>
+                </div>
+                <div>
+                    <p>Компактная конструкция, высокая скорость, высокая точность позиционирования, малый размер и гибкость, защита от воды<br /> и пыли,<br /> легкий корпус, поддержка модуля Wi‑Fi,<br /> загрузка<br /> и выгрузка данных, мониторинг в реальном времени.<br /><br />
+                    </p>
+                    <h4>Область применения:</h4>
+                    <p>Компьютерная, производство электроники, сортировка,<br /> фармацевтическое<br /> производство, пищевая промышленность.<br />
+                    </p>
+                </div>
+                <div>
+                    <h4>Основные технические характеристики</h4>
+                    <img
+                            alt="таблица характеристик"
+                            src="/src/components/industrialRobotsBlock/robot1/table.svg"
+                    />
+                </div>
+            </div>
+            <div>
+                <div>
+                    <p>Высокий уровень защиты, высокая скорость, точность, стабильность<br /><br /></p>
+                    <h4>Область применения:</h4>
+                    <p>Компьютерная, коммуникационная, бытовая электроника,<br /> металлообработка, пищевая промышленность, фармацевтическое производство. Идеально подходит для интенсивной работы в зоне<br /> замкнутого пространства.<br />
+                    </p>
+                </div>
+                <div>
+                    <h4>Основные технические характеристики</h4>
+                    <img
+                            alt="таблица характеристик"
+                            src="/src/components/industrialRobotsBlock/robot2/table.svg"
+                    />
+                </div>
+                <div>
+                    <h3>Настольные роботы<br /> серии SRTt</h3>
+                    <div>
+                        <img
+                                alt="Фото робота серии SRTt"
+                                src="/src/components/industrialRobotsBlock/robot2/photo.webp"
+                        />
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <h3>Роботы легко - средне<br /> нагруженные SRTе</h3>
+                    <div>
+                        <img
+                                alt="Фото робота серии SRTе"
+                                src="/src/components/industrialRobotsBlock/robot3/photo.webp"
+                        />
+                    </div>
+                </div>
+                <div>
+                    <p>Высокая скорость, повторяемость, точность позиционирования и<br /> жесткость, высокий<br /> уровень защиты, легкий корпус, низкие<br /> затраты<br /> на эксплуатацию<br /> и обслуживание<br /><br />
+                    </p>
+                    <h4>Область применения:</h4>
+                    <p>Компьютерная, коммуникационная,<br /> производство бытовой<br /> электроники, металлообработка, сварочное производство,<br /> окрасочное производство. В основном применяется для погрузки и разгрузки,<br /> шлифовки и полировки, сварки, перемещения<br /> и укладки в тяжелых условиях.<br />
+                    </p>
+                </div>
+                <div>
+                    <h4>Основные технические характеристики</h4>
+                    <img
+                            alt="таблица характеристик"
+                            src="/src/components/industrialRobotsBlock/robot3/table.svg"
+                    />
+                </div>
+            </div>
+            <div>
+                <div>
+                    <p>Жёсткая конструкция, высокая стабильность, незначительные<br /> колебания крутящего<br /> момента.<br /><br />
+                    </p>
+                    <h4>Область применения:</h4>
+                    <p>Производственные линии, тяжелая промышленность,<br /> машиностроение, механическая обработка, перемещение<br /> тяжелых<br /> грузов.<br />
+                    </p>
+                </div>
+                <div>
+                    <h4>Основные технические характеристики</h4>
+                    <img
+                            alt="таблица характеристик"
+                            src="/src/components/industrialRobotsBlock/robot4/table.svg"
+                    />
+                </div>
+                <div>
+                    <h3>Роботы тяжело<br /> нагруженные SRTh</h3>
+                    <div>
+                        <img
+                                alt="Фото робота серии SRTh"
+                                src="/src/components/industrialRobotsBlock/robot4/photo.webp"
+                        />
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h2>Присоединяйтесь к нам!</h2>
+            <div>
+                <p>Мы предлагаем сотрудничество<br /> специалистам, которые<br /> хотят<br /> расти и<br /> развиваться в области цифровых<br /> технологий. Если у<br /> вас есть знания и амбиции,<br /> независимо<br /> от вашего<br /> местоположения, мы будем рады видеть вас в нашей<br /> команде. Мы предлагаем возможности для<br />обучения,<br />развития и достойного заработка.<br /><br /> Мы готовы к сотрудничеству с<br /> региональными<br /> компаниями<br />для реализации проектов и решения<br /> актуальных задач<br /> на<br /> местах.
+                </p>
+                <div>
+                    <h3>Контакты</h3>
+                    <br /><br />
+                    <a href="mailto:srtlt-robot@yandex.ru">srtlt-robot@yandex.ru</a>
+                    <a href="tel:+79276573030">+7 (927) 657-30-30</a>
+                    <a href="https://t.me/+79276573030">telegram</a>
+                    <a href="https://api.whatsapp.com/send/?phone=79276573030">whatsApp</a>
+                </div>
+            </div>
+            <div>
+                <form autocomplete="on">
+                    <div>
+                        <div>
+                            <input
+                                    maxlength="150"
+                                    name="name"
+                                    placeholder="Ваше имя *"
+                                    type="text"
+                                    value=""
+                            />
+                        </div>
+                        <div>
+                            <input
+                                    maxlength="20"
+                                    name="phone"
+                                    placeholder="Телефон *"
+                                    type="tel"
+                                    value=""
+                            />
+                        </div>
+                        <div>
+                            <input
+                                    maxlength="100"
+                                    name="email"
+                                    placeholder="Email *"
+                                    type="email"
+                                    value=""
+                            />
+                        </div>
+                        <div>
+                            <div>
+                                <textarea
+                                        maxlength="2000"
+                                        name="description"
+                                        placeholder="Описание проблемы или вопроса *"
+                                ></textarea>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <input
+                                accept="image/*,.pdf,.doc,.docx,.txt,.zip,.rar"
+                                multiple="multiple"
+                                name="filetoupload"
+                                type="file"
+                        />
+                        <label for="fileInput">Прикрепить файлы</label>
+                        <div>Максимальный размер файла: 50 МБ</div>
+                    </div>
+                    <button type="submit">Отправить сообщение</button>
+                </form>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h2>данные о компании</h2>
+                <div>
+                    <div>
+                        <div>
+                            <div>Общество с ограниченной ответственностью "Интеллектуальные Роботизированные Технологии"</div>
+                            <div>ИНН 6320083494</div>
+                            <div>
+                                <div>Юридический адрес</div>
+                                <div>445043, Самарская область, г.о. Тольятти, г. Тольятти, ул Окраинная, влд. 24, помещ. 202</div>
+                            </div>
+                            <div>
+                                <div>Фактический адрес</div>
+                                <div>445043, Самарская область, г.о. Тольятти, г. Тольятти, ул Окраинная, влд. 24, помещ. 202</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <div>Основной код ОКВЭД</div>
+                            <div>
+                                <div>62.01</div>
+                                <div>Разработка компьютерного программного обеспечения</div>
+                                <div>Информация о видах ИТ-деятельности согласно Приказу Минцифры России от 11.05.2023 N 449 "Об утверждении перечня видов деятельности в области информационных технологий" (Зарегистрировано в Минюсте России 14.08.2023 N 74778)</div>
+                            </div>
+                            <div>
+                                <div>Код 1.03</div>
+                                <div>Проектирование и (или) иная деятельность, а также оказание услуг в отношении технологий робототехники и сенсорики, в том числе в области сенсоромоторной координации и пространственного позиционирования, сенсоров и обработки сенсорной информации, интеллектуальных систем управления робототехническими системами, систем автоматизации управления, включая беспилотные воздушные судна и высокоавтоматизированные транспортные средства</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div>
+                <div>
+                    <a href="/">
+                        <img
+                                alt="footerLogo"
+                                src="/footerRuLogo.svg"
+                        />
+                    </a>
+                </div>
+                <a href="mailto:srtlt-robot@yandex.ru">srtlt-robot@yandex.ru</a>
+                <div>
+                    <nav>
+                        <a href="/">О нас</a>
+                        <a href="/cases">Наши работы</a>
+                        <a href="/manufacturing">Производство</a>
+                        <a href="/catalog">Каталог оборудования</a>
+                        <a href="/#contacts">Контакты</a>
+                    </nav>
+                    <a href="/policy">Политика конфиденциальности</a>
+                </div>
+            </div>
+        </footer>
+    </div>
+</div>
 </body>
 </html>
