--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            animation-timing-function: ease-out;
         }
 
         @keyframes load {
@@ -369,7 +370,7 @@
                 // window.scrollTo(0, 0);
             }
             // document.body.style.overflowY = "visible";
-        }, 1500);
+        }, 2500);
     });
 </script>
 <div id="root"></div>
